--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -10,12 +14,15 @@ a {
   color: inherit;
   text-decoration: none;
 }
+li {
+  list-style-type: none;
+}
 
 * {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,4 +30,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
