--- a/components/HomePage/countdown/countDown.module.scss
+++ b/components/HomePage/countdown/countDown.module.scss
@@ -1,24 +1,23 @@
 .container {
   width: 95%;
-  //   height: 300px;
-  margin: 2rem auto;
+  max-width: 1700px;
+  height: 400px;
+  margin: 3rem auto;
   position: relative;
   .image {
-    margin: 0 auto;
+    z-index: -1;
   }
   .content {
     position: absolute;
-    width: 40%;
-    height: 100px;
-    // background-color: red;
+    width: 45%;
     top: 50%;
-    height: 100%;
+    height: 80%;
     max-width: 400px;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
     > p {
@@ -32,8 +31,32 @@
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 768px) {
   .container {
-    height: 300px;
+    height: 350px;
+    .content {
+      width: 60%;
+      height: 60%;
+      > p {
+        font-size: 1rem;
+      }
+      > h1 {
+        font-size: 1.5rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 560px) {
+  .container {
+    .content {
+      width: 80%;
+      > p {
+        font-size: 0.9rem;
+      }
+      > h1 {
+        font-size: 1.2rem;
+      }
+    }
   }
 }
