--- a/components/HomePage/countdown/time-box/time-box.module.scss
+++ b/components/HomePage/countdown/time-box/time-box.module.scss
@@ -14,3 +14,14 @@
     font-weight: bold;
   }
 }
+@media (max-width: 768px) {
+  .container {
+    width: 60px;
+    height: 60px;
+
+    p:nth-child(1) {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+  }
+}
