--- a/UI/side-modal/side-modal.module.scss
+++ b/UI/side-modal/side-modal.module.scss
@@ -18,6 +18,7 @@
     left: -30vw;
     transition: all 0.3s;
     padding: 5% 1rem;
+    overflow-y: scroll;
   }
   .cancel {
     position: absolute;
