ADD: add discount to products

--- a/components/product-page/product-detail/product-detail.module.scss
+++ b/components/product-page/product-detail/product-detail.module.scss
@@ -24,6 +24,9 @@
   &_price {
     font-weight: bold;
     margin-bottom: 0.5rem;
+    > span {
+      margin-right: 0.8rem;
+    }
   }
   &_description {
     font-size: 0.9rem;
