--- a/components/ProductCMP/animation.module.css
+++ b/components/ProductCMP/animation.module.css
@@ -1,69 +1,59 @@
-.customAnimate{
-    align-self: flex-start;
-    transform: translateY(0);
-    opacity: 1;
-    position: absolute;
-    transition: all 300ms ease;
-    z-index: 1;
+.customAnimate {
+  align-self: flex-start;
+  transform: translate(2rem, 1.9rem);
+  opacity: 1;
+  position: absolute;
+  transition: all 300ms ease;
+  z-index: 1;
 }
 
 .customButtom {
-    align-self: flex-start;
-    transform: translateY(-1rem);
-    opacity: 0;
-    position: absolute;
-    transition: all 300ms ease;
-    z-index: 1;
+  align-self: flex-start;
+  transform: translate(0, 0);
+  opacity: 0;
+  position: absolute;
+  transition: all 300ms ease;
+  z-index: 1;
 }
 
-
-.cardAnimate{
-    position: absolute;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    bottom: 0;
-    transition: all 400ms ease;
-    border-radius: 0.5rem 0.5rem 0 0;
-    background-color:#1f2937;
+.cardAnimate {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  bottom: 0;
+  transition: all 400ms ease;
+  border-radius: 3px;
+  background-color: rgb(44, 44, 44);
+  cursor: pointer;
 }
 
-.cardButtom{
-    position: absolute;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    bottom: -4rem;
-    transition: all 400ms ease;
-    border-radius: 0.5rem 0.5rem 0 0;
-    background-color:#1f2937;
+.cardButtom {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  bottom: -4rem;
+  transition: all 400ms ease;
+  border-radius: 3px;
+  background-color: rgb(90, 90, 90);
 }
 
+@media (max-width: 1024px) {
+  .cardAnimate {
+    display: none;
+  }
+  .customAnimate {
+    display: none;
+  }
+  .cardButtom {
+    display: none;
+  }
+  .customButtom {
+    display: none;
+  }
+}
 
-@media (max-width: 1024px) { 
-    .cardAnimate{
-        display: none;
-    }
-    .customAnimate{
-        display: none;
-    }
-    .cardButtom{
-        display: none;
-    }
-    .customButtom{
-        display: none;
-    }
- }
-
-
-
-
-
-
-
-
-
-
- /* w-full flex flex-row-reverse justify-center gap-2 mt-3 lg:hidden */
+/* w-full flex flex-row-reverse justify-center gap-2 mt-3 lg:hidden */
 
 /* hidden lg:flex w-full -bottom-13 transition-all delay-200 ease-in-out absolute justify-center bg-gray-800 rounded-lg */
