--- a/components/ProductCMP/full-width-product/product-actions/product-actions.module.scss
+++ b/components/ProductCMP/full-width-product/product-actions/product-actions.module.scss
@@ -1,11 +1,10 @@
 .action {
   display: flex;
-  width: 140px;
-  justify-content: space-between;
   &_items {
     cursor: pointer;
     width: 38px;
     height: 38px;
+    margin-right: 1rem;
     background-color: #ee6c4d;
     color: white;
     border-radius: 4px;
