--- a/UI/side-modal/side-modal.module.scss
+++ b/UI/side-modal/side-modal.module.scss
@@ -12,13 +12,15 @@
   color: black;
   .inner {
     width: 40vw;
+    max-width: 360px;
+    min-width: 300px;
     height: 100vh;
     background-color: white;
     position: relative;
     left: -30vw;
     transition: all 0.3s;
-    padding: 5% 1rem;
-    overflow-y: scroll;
+    padding: 5% 1rem 1rem 1rem;
+    overflow-y: auto;
   }
   .cancel {
     position: absolute;
