--- a/components/Layout/navbar/options/options.module.scss
+++ b/components/Layout/navbar/options/options.module.scss
@@ -2,18 +2,18 @@
   display: flex;
   color: rgb(104, 104, 104);
   font-size: 0.9rem;
-  > li {
+  li {
     margin-left: 1.2rem;
     cursor: pointer;
     display: flex;
     align-items: center;
 
     &:hover {
-      > span {
+      span {
         color: #ee6c4d;
       }
     }
-    > span {
+    span {
       transition: all 0.4s;
       margin-right: 0.3rem;
       font-size: 1.5rem;
@@ -23,7 +23,7 @@
 
 @media screen and (max-width: 1200px) {
   .options {
-    > li {
+    li {
       margin-left: 0.8rem;
     }
     p {
