--- a/UI/primary-button/primary-button.module.scss
+++ b/UI/primary-button/primary-button.module.scss
@@ -6,6 +6,9 @@
   border-radius: 3px;
   transition: all 0.3s;
   width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   &:hover {
     background-color: black;
   }
