--- a/components/search-page/search.module.scss
+++ b/components/search-page/search.module.scss
@@ -11,4 +11,9 @@
     width: 90%;
     max-width: 1000px;
   }
+  .products_container {
+    margin-bottom: "4rem";
+    width: 80%;
+    margin: 0 auto;
+  }
 }
