fix: add links to collections page

--- a/components/Layout/navbar/hide-content/hide-content.module.scss
+++ b/components/Layout/navbar/hide-content/hide-content.module.scss
@@ -8,11 +8,13 @@
     cursor: pointer;
     transition: all 0.3s;
     font-weight: bold;
-    display: flex;
-    align-items: center;
-    span {
-      margin-left: 4px;
-      font-size: 0.7rem;
+    > a {
+      display: flex;
+      align-items: center;
+      span {
+        margin-left: 4px;
+        font-size: 0.7rem;
+      }
     }
   }
   &:hover,
