fix: fix top-selling component bugs

--- a/components/HomePage/top-selling/top-selling.module.scss
+++ b/components/HomePage/top-selling/top-selling.module.scss
@@ -3,6 +3,7 @@
   height: fit-content;
   margin: 0 auto;
   position: relative;
+  margin-top: 2rem;
   .inner {
     width: 100%;
     height: 100%;
