--- a/components/product-page/product-detail/product-detail.module.scss
+++ b/components/product-page/product-detail/product-detail.module.scss
@@ -24,6 +24,7 @@
   &_price {
     font-weight: bold;
     margin-bottom: 0.5rem;
+    width: fit-content;
     > span {
       margin-right: 0.8rem;
     }
